@@ -138,7 +138,8 @@ class DSObject(object):
 
             activityfactory.create(bundle.get_service_name())
         else:
-            if not self.get_activities():
+            if not self.get_activities() and service_name is None:
+                logging.warning('No activity can open this object.')
                 return
             if service_name is None:
                 service_name = self.get_activities()[0].service_name
